--- a/front/pom.xml
+++ b/front/pom.xml
@@ -2,14 +2,9 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.faliorn.collectionmuseum</groupId>
-        <artifactId>main</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        <relativePath>../main/pom.xml</relativePath>
-    </parent>
-
+    <groupId>com.renegades.collectionmuseum</groupId>
     <artifactId>front</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>Collection Museum Front</name>
